--- a/Templates/.ibmi/.properties
+++ b/Templates/.ibmi/.properties
@@ -1,2 +1,2 @@
-#Tue Aug 20 11:07:26 CDT 2013
-com.ibm.etools.iseries.remotebuild\:ActiveBuildStyle=com.ibm.etools.iseries.remotebuild.style.program
+#Mon Aug 26 22:31:44 CDT 2013
+com.ibm.etools.iseries.remotebuild\:ActiveBuildStyle=com.ibm.etools.iseries.remotebuild.NullBuildStyle
