--- a/Modules/.ibmi/.properties
+++ b/Modules/.ibmi/.properties
@@ -1,2 +1,2 @@
-#Tue Aug 20 12:22:29 CDT 2013
-com.ibm.etools.iseries.remotebuild\:ActiveBuildStyle=com.ibm.etools.iseries.remotebuild.NullBuildStyle
+#Tue Aug 27 08:28:44 CDT 2013
+com.ibm.etools.iseries.remotebuild\:ActiveBuildStyle=com.ibm.etools.iseries.remotebuild.style.program
